# aln-platform-ecosystem

./: Cargo.toml  README.md
.econet/: econet_repo_index.sql
aln/: DefinitionRegistry2026v1.aln  EnergyCostField2026v1.aln  LaneStatusShard2026v1.aln  PlaneWeightsShard2026v1.aln  RiskPropagationKernel2026v1.aln
aln-platform-ecosystem/aln/: ArtifactRegistryShard2026v1.aln  alnDefinitionRegistry2026v1.aln
aln/platform/: ecosystem.aln
crates/energy-cost-cartographer/: Cargo.toml  systemd.md
crates/energy-cost-cartographer/docs/: energy_cartographer_wiring.md
crates/energy-cost-cartographer/src/: lib.rs  power_model.rs
crates/energy-cost-cartographer/tests/: monotonicity_replay.rs
db/: eco_energy_cartographer_index.sql
ecosafety/: PlaneWeightsShard2026v1.aln
src/: lib.rs  main.rs
src/adapter/: mod.rs  registry.rs  self_healing.rs  template.rs
src/api/: cross_platform.rs  mod.rs
src/cli/: commands.rs  mod.rs
src/config/: mod.rs  platform_registry.rs
src/detection/: http_detector.rs  mod.rs
src/security/: mod.rs  sanitizer.rs
