[package]
name = "aln-platform-ecosystem"
version = "0.1.0"
edition = "2021"
description = "Cross-platform ALN adapter ecosystem for AI platforms, legacy systems, and emerging runtimes."
license = "MIT"
repository = "https://example.com/aln-platform-ecosystem"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
regex = "1.10"
once_cell = "1.19"
log = "0.4"
env_logger = "0.11"
url = "2.5"
bytes = "1.6"
